--- a/config.org
+++ b/config.org
@@ -69,6 +69,7 @@
     (setq dashboard-banner-logo-title "why do they call it oven when you of in the cold food of out hot eat the food")
     (setq dashboard-center-content t)
     (setq dashboard-show-shortcuts nil)
+    (setq initial-buffer-choice (lambda () (get-buffer-create "*dashboard*")))
     )
 #+end_src
 *** Clock
