comment out exwm lol

--- a/config/customFunctions.org
+++ b/config/customFunctions.org
@@ -53,8 +53,8 @@
     (org-babel-load-file (expand-file-name "~/.config/emacs/config/config.org"))
     (delete-file (expand-file-name "~/.config/emacs/config/config.el"))
 
-    (org-babel-load-file (expand-file-name "~/.config/emacs/config/exwm.org"))
-    (delete-file (expand-file-name "~/.config/emacs/config/exwm.el"))
+   ;; (org-babel-load-file (expand-file-name "~/.config/emacs/config/exwm.org"))
+   ;; (delete-file (expand-file-name "~/.config/emacs/config/exwm.el"))
 
     (org-babel-load-file (expand-file-name "~/.config/emacs/config/customFunctions.org"))
     (delete-file (expand-file-name "~/.config/emacs/config/customFunctions.el")))
