--- a/config/config.org
+++ b/config/config.org
@@ -1,15 +1,10 @@
 #+TITLE: EMACS CONFIG
-* Terminal
-** VTerm
+* VTerm
 #+begin_src emacs-lisp
   (use-package vterm
     :ensure t)
 #+end_src
 * Emacs
-** stop asking abt theme
-#+begin_src emacs-lisp
-(setq custom-safe-themes t)
-#+end_src
 ** tab width
 #+begin_src emacs-lisp
   (setq-default tab-width 8)
@@ -22,29 +17,20 @@
   :init
   (which-key-mode))
 #+end_src
-*** Beacon
+*** Auto Completion
 #+begin_src emacs-lisp
-  (use-package beacon
-  :ensure t
-  :init
-  (beacon-mode 1))
+  (use-package company
+    :ensure t
+    :init
+    (add-hook 'after-init-hook 'global-company-mode))
 #+end_src
+
 *** Avy
 #+begin_src emacs-lisp
   (use-package avy
     :ensure t
     :bind
     ("M-s" . avy-goto-char))
-#+end_src
-*** Rainbow Mode
-#+begin_src emacs-lisp
-  (use-package rainbow-mode
-    :ensure t
-    :init
-    (add-hook 'prog-mode-hook 'rainbow-mode)
-    (add-hook 'fundamental-mode-hook 'rainbow-mode)
-    (rainbow-mode 1))
-
 #+end_src
 *** Hungry Delete
 #+begin_src emacs-lisp
@@ -58,31 +44,7 @@
     :ensure t
     :bind ("C-c s" . sudo-edit))
 #+end_src
-*** Rainbow Delimiter
-#+begin_src emacs-lisp
-  (use-package rainbow-delimiters
-    :ensure t
-    :init
-    (rainbow-delimiters-mode 1))
-#+end_src
-*** Dashboard
-#+begin_src emacs-lisp
-  (use-package dashboard
-    :ensure t
-    :config
-    (dashboard-setup-startup-hook)
-    (setq dashboard-items '((recents . 5)))
-    (setq dashboard-startup-banner 'official)
-    (setq dashboard-banner-logo-title "dead inside frfr")
-    (setq dashboard-center-content t)
-    (setq dashboard-show-shortcuts nil)
-    (setq initial-buffer-choice (lambda () (get-buffer-create "*dashboard*")))
-    )
-#+end_src
-*** Clock
-#+begin_src emacs-lisp
-  (display-time-mode 1)
-#+end_src
+
 ** Turn off Backups
 #+begin_src emacs-lisp
   (setq make-backup-files nil)
@@ -101,18 +63,6 @@
 #+begin_src emacs-lisp
   (defalias 'yes-or-no-p 'y-or-n-p)
 #+end_src
-** Compress symbols (lambda = λ)
-#+begin_src emacs-lisp
-  (when window-system (global-prettify-symbols-mode t))
-#+end_src
-** Hide Fancy Bloat
-#+begin_src emacs-lisp
-(tool-bar-mode -1)
-(menu-bar-mode -1)
-(scroll-bar-mode -1)
-;(setq inhibit-startup-message t)
-#+end_src
-
 ** Electric Pairs
 #+begin_src emacs-lisp
   (setq electric-pair-pairs '(
@@ -121,51 +71,14 @@
 			      ))
   (electric-pair-mode t)
 #+end_src
-** Modeline
-*** Rows and Cols
-#+begin_src emacs-lisp
-  (line-number-mode 1)
-  (column-number-mode 1)
-#+end_src
-*** Spaceline
-#+begin_src emacs-lisp
-  (use-package spaceline
-    :ensure t
-    :config
-    (require `spaceline-config)
-    (setq powerline-default-separator (quote arrow))
-    (spaceline-spacemacs-theme))
-#+end_src
-*** Diminish
-#+begin_src emacs-lisp
-  (use-package diminish
-    :ensure t
-    :init
-    (diminish `hungry-delete-mode)
-    (diminish `beacon-mode)
-    (diminish `subword-mode)
-    (diminish `rainbow-mode)
-    (diminish `which-key-mode))
-#+end_src
+
 ** Kill Ring Popup
 #+begin_src emacs-lisp
   (use-package popup-kill-ring
     :ensure t
     :bind ("M-y" . popup-kill-ring))
 #+end_src
-** Line Number
-#+begin_src emacs-lisp
-(add-hook 'prog-mode-hook 'display-line-numbers-mode)
-#+end_src
 * Org
-** Org Bullets
-#+begin_src emacs-lisp
-  (use-package org-bullets
-    :ensure t
-    :config
-    (add-hook 'org-mode-hook (lambda () (org-bullets-mode))))
-#+end_src
-
 ** Fill in Source Block Language
 #+begin_src emacs-lisp
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
@@ -173,9 +86,9 @@
 #+end_src
 ** Code in current window
 #+begin_src emacs-lisp
-    (setq org-src-window-setup 'current-window)
-    
+  (setq org-src-window-setup 'current-window)
 #+end_src
+
 ** Require
 #+begin_src emacs-lisp
 (require 'org)
@@ -261,3 +174,11 @@
     (edwina-setup-dwm-keys)
     (edwina-mode 1))
 #+end_src
+
+* Modes
+** Haskell Mode
+#+begin_src emacs-lisp
+  (use-package haskell-mode
+    :ensure t)
+#+end_src
+
