--- a/config/config.org
+++ b/config/config.org
@@ -1,23 +1,22 @@
 #+TITLE: EMACS CONFIG
+
 * VTerm
 #+begin_src emacs-lisp
   (use-package vterm
     :ensure t)
+
+  (use-package multi-vterm
+    :ensure t)
 #+end_src
-* Emacs
-** tab width
-#+begin_src emacs-lisp
-  (setq-default tab-width 8)
-#+end_src
-** Packages
-*** Which-Key
+
+* Which-Key
 #+begin_src emacs-lisp
   (use-package which-key
   :ensure t
   :init
   (which-key-mode))
 #+end_src
-*** Auto Completion
+* Auto Completion
 #+begin_src emacs-lisp
   (use-package company
     :ensure t
@@ -25,83 +24,38 @@
     (add-hook 'after-init-hook 'global-company-mode))
 #+end_src
 
-*** Avy
+* Avy
 #+begin_src emacs-lisp
   (use-package avy
     :ensure t
     :bind
     ("M-s" . avy-goto-char))
 #+end_src
-*** Hungry Delete
+* Hungry Delete
 #+begin_src emacs-lisp
   (use-package hungry-delete
     :ensure t
     :config (global-hungry-delete-mode))
 #+end_src
-*** Sudo Edit
+* Sudo Edit
 #+begin_src emacs-lisp
   (use-package sudo-edit
     :ensure t
     :bind ("C-c s" . sudo-edit))
 #+end_src
-
-** Turn off Backups
-#+begin_src emacs-lisp
-  (setq make-backup-files nil)
-  (setq auto-save-default nil)
-#+end_src
-** Scroll Conservatively
-#+begin_src emacs-lisp
-  (setq scroll-conservatively 100)
-#+end_src
-** No Bell
-#+begin_src emacs-lisp
-  (setq ring-bell-function 'ignore)
-#+end_src
-
-** Type Y instead of Yes when killing active buffer
-#+begin_src emacs-lisp
-  (defalias 'yes-or-no-p 'y-or-n-p)
-#+end_src
-** Electric Pairs
-#+begin_src emacs-lisp
-  (setq electric-pair-pairs '(
-			      (?\( . ?\))
-			      (?\[ . ?\])
-			      ))
-  (electric-pair-mode t)
-#+end_src
-
-** Kill Ring Popup
+* Kill Ring Popup
 #+begin_src emacs-lisp
   (use-package popup-kill-ring
     :ensure t
     :bind ("M-y" . popup-kill-ring))
 #+end_src
-* Org
-** Fill in Source Block Language
-#+begin_src emacs-lisp
-  (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
-  (add-to-list 'org-structure-template-alist '("hs" . "src haskell"))
-#+end_src
-** Code in current window
-#+begin_src emacs-lisp
-  (setq org-src-window-setup 'current-window)
-#+end_src
 
-** Require
+* Require
 #+begin_src emacs-lisp
 (require 'org)
 #+end_src
-* IDO
-** Enable IDO Mode
-#+begin_src emacs-lisp
-  (setq ido-enable-flex-matching nil)
-  (setq ido-create-new-buffer 'always)
-  (setq ido-everywhere t)
-  (ido-mode 1)
-#+end_src
-** IDO-Vertical
+
+* IDO-Vertical
 #+begin_src emacs-lisp
   (use-package ido-vertical-mode
     :ensure t
@@ -109,7 +63,7 @@
     (ido-vertical-mode 1))
   (setq ido-vertical-define-keys 'C-n-and-C-p-only)
 #+end_src
-** Smex
+* Smex
 #+begin_src emacs-lisp
   (use-package smex
     :ensure t
@@ -118,24 +72,7 @@
     ("M-x" . smex))
 #+end_src
 
-** Switch Buffer
-#+begin_src emacs-lisp
-  (global-set-key (kbd "C-x C-b") 'ido-switch-buffer)
-#+end_src
-* Buffers
-** Enable Ibuffer
-#+begin_src emacs-lisp
-  (global-set-key (kbd "C-x b") 'ibuffer)
-#+end_src
-
-** Kill Current Buffer
-#+begin_src emacs-lisp
-  (defun kill-current-buffer ()
-    (interactive)
-    (kill-buffer (current-buffer)))
-  (global-set-key (kbd "C-x k") 'kill-current-buffer)
-#+end_src
-** Switch Window
+* Switch Window
 #+begin_src emacs-lisp
   (use-package switch-window
     :ensure t
@@ -146,33 +83,9 @@
     (setq switch-window-shortcut-style 'qwerty)
     (setq switch-window-qwerty-shortcuts
 	  '("a" "s" "d" "f" "h" "j" "k" "l"))
+    (setq switch-window-shortcut-appearance 'text)
     :bind
     ([remap other-window] . switch-window))
-#+end_src
-*** Window Splitting Function
-#+begin_src emacs-lisp
-  (defun split-and-follow-horizontally ()
-    (interactive)
-    (split-window-below)
-    (balance-windows)
-    (other-window 1))
-  (global-set-key (kbd "C-x 2") 'split-and-follow-horizontally)
-
-  (defun split-and-follow-vertically ()
-    (interactive)
-    (split-window-right)
-    (balance-windows)
-    (other-window 1))
-  (global-set-key (kbd "C-x 3") 'split-and-follow-vertically)
-#+end_src
-*** Edwina pane manager
-#+begin_src emacs-lisp
-  (use-package edwina
-    :ensure t
-    :config
-    (setq display-buffer-base-action '(display-buffer-below-selected))
-    (edwina-setup-dwm-keys)
-    (edwina-mode 1))
 #+end_src
 
 * Modes
@@ -182,3 +95,11 @@
     :ensure t)
 #+end_src
 
+
+** SLY
+#+begin_src emacs-lisp
+  (use-package sly
+    :ensure t
+    :config
+    (setq inferior-lisp-program (executable-find "sbcl")))
+#+end_src
