--- a/config/eyeCandy.org
+++ b/config/eyeCandy.org
@@ -15,7 +15,12 @@
 
 * Compress symbols (lambda = λ)
 #+begin_src emacs-lisp
-  (when window-system (global-prettify-symbols-mode t))
+  (use-package pretty-mode
+    :ensure t)
+  (when window-system
+    (global-pretty-mode t)
+    (global-prettify-symbols-mode t))
+
 #+end_src
 
 * Hide Menu Bars
@@ -133,13 +138,15 @@
 		  (when (eq (length (frame-list)) 2))
 		  (progn
 		    (select-frame frame)
-		    (load-theme 'deeper-blue t)
-		    (set-frame-font "Iosevka-18" nil t t))))
-    (load-theme 'deeper-blue t)
-    (set-frame-font "Iosevka-18" nil t t))
+		    (load-theme 'ame t)
+		    (set-frame-font "Iosevka-18" nil t t)))))
+    (load-theme 'ame t)
+    (set-frame-font "Iosevka-18" nil t t)
 
+#+end_src
 
-
-
-
+* Auto themer
+#+begin_src emacs-lisp
+  (use-package autothemer
+    :ensure t)
 #+end_src
