--- a/config/customFunctions.org
+++ b/config/customFunctions.org
@@ -51,5 +51,5 @@ Binds defined in keybinds.org
 #+begin_src emacs-lisp
   (defun config-visit-wm ()
       (interactive)
-      (find-file "~/.config/qtile/config.py"))
+      (find-file "~/.config/xmonad/README.org"))
 #+end_src
